--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "motion": "^12.7.2",
     "next": "15.3.0",
     "next-themes": "^0.4.6",
+    "prism-react-renderer": "^2.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-simple-typewriter": "^5.0.1",
     "react-syntax-highlighter": "^15.6.1",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5"
