--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "motion": "^12.7.2",
     "next": "15.3.0",
     "next-themes": "^0.4.6",
+    "prism-react-renderer": "^2.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-simple-typewriter": "^5.0.1",
